--- a/appveyor.yml
+++ b/appveyor.yml
@@ -71,8 +71,10 @@ install:
       {
         # scripts/XXX.msys make gdl/mingw/mingw32 and load it.
         cd c:/projects/gdl
-        $env:GMNAME="GraphicsMagick-1.3.29-1"
-        $env:WXNAME="wxWidgets-3.0.2-17"
+        #       $env:GMNAME="GraphicsMagick-1.3.29-1"
+        $env:GMNAME=""
+        #      $env:WXNAME="wxWidgets-3.0.2-17"
+        $env:WXNAME="wxWidgets-3.0.4-3"
         $env:LOCALM32="c:/projects/gdl/mingw/$env:mname"
         c:/msys64/usr/bin/bash.exe -lc 'cd $OLDPWD &&. ./scripts/appveyor_1.msys'
         cd c:/projects/gdl/mingw
@@ -282,7 +284,7 @@ build_script:
   # Given that a GM-Q32 directory will not be present in mingw/, GMNAME can be anything to trigger inclusion
   # in the appveyor_gdl build: The distribution is created in appveyor_1.msys from the repo.
   #- set GMNAME=GraphicsMagick-1.3.27
-  - set GMNAME=GraphicsMagick-1.3.29-1
+  #- set GMNAME=GraphicsMagick-1.3.29-1
   - C:\msys64\usr\bin\bash.exe -lc "cd /c/projects/gdl &&. scripts/appveyor_gdl.msys"
   
 on_failure:
