--- a/appveyor.yml
+++ b/appveyor.yml
@@ -190,10 +190,11 @@ on_failure:
 after_build:
   - cd c:\projects\gdl
   - ps: |
-      copy c:\projects\gdl\mingw\$env:mname\bin\*.dll c:\projects\gdl\install\gdl\bin
-      copy C:\mingw-w64\$env:GCC\$env:mname\bin\*.dll c:\projects\gdl\install\gdl\bin
+      copy C:\projects\gdl\mingw\$env:mname\bin\*.dll C:\projects\gdl\install\gdl\bin
+      copy C:\projects\gdl\mingw\bsd-xdr-1.0.0\mingw\*.dll C:\projects\gdl\install\gdl\bin
+      copy C:\mingw-w64\$env:GCC\$env:mname\bin\*.dll C:\projects\gdl\install\gdl\bin
   - ps: |
-      copy -r c:\projects\gdl\mingw\$env:mname\share\plplot* c:/projects/gdl/install/plplot5.13/lib
+      copy -r c:\projects\gdl\mingw\$env:mname\share\plplot* c:\projects\gdl\install\
       copy INSTALL.plplot c:/projects/gdl/install
   - ps: copy scripts/rungdl.bat c:/projects/gdl/install/rungdl.bat
   - ps: copy -r src/pro install/gdl/gdllib
