--- a/appveyor.yml
+++ b/appveyor.yml
@@ -172,6 +172,7 @@ on_failure:
 after_build:
   - cd c:\projects\gdl
   - ps: |
+      copy C:\msys64\$env:mname\bin\*.dll install\gdl\bin\
       copy mingw\$env:mname\bin\*.dll install\gdl\bin\
       copy mingw\bsd-xdr-1.0.0\mingw\*.dll install\gdl\bin\
   - ps: |
